plugins {
    id 'java-library'
}

group 'com.github.lawben'
version '1.0-SNAPSHOT'

sourceCompatibility = 8

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.2'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-library', version: '2.1'

    compile group: 'org.zeromq', name: 'jeromq', version: '0.5.0'

    def scottyVersion = '3e7fbc53c32c7c25f06f7446f88edfbd265792c3'
    implementation group: 'com.github.lawben.scotty-window-processor', name: 'core', version: scottyVersion
    implementation group: 'com.github.lawben.scotty-window-processor', name: 'state', version: scottyVersion
    implementation group: 'com.github.lawben.scotty-window-processor', name: 'slicing', version: scottyVersion
}

println "CLASSPATH: " + (configurations.runtimeClasspath + sourceSets.main.runtimeClasspath).asPath
